syntax = "proto3";

package Proto.Command.Tickets;

service TicketCommandService {
  rpc CreateTicket (CreateTicketCommand) returns (CommandResponse);
  rpc UpdateTicketData (UpdateTicketDataCommand) returns (CommandResponse);
  rpc UpdateTicketDocumentation (UpdateTicketDocumentationCommand) returns (CommandResponse);
}

message CreateTicketCommand {
  string ticketId = 1;
  string name = 2;
  string bookingNumber = 3;
  repeated string sprintIds = 4;
}

message UpdateTicketDataCommand {
  string ticketId = 1;
  string name = 2;
  string bookingNumber = 3;
  repeated string sprintIds = 4;
}

message UpdateTicketDocumentationCommand {
  string ticketId = 1;
  string documentation = 2;
}

message CommandResponse {
  bool success = 1;
}
